--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="container center">
 		<header>
-			<h1 class="uk-heading-medium uk-heading-divider">SDV Downgrader</h1>
+			<h1 class="uk-heading-medium uk-heading-divider reveal-text">SDV Downgrader</h1>
 		</header>
 		<div class="uk-button-group">
 			<button class="uk-button uk-button-primary">Select Version</button>
