Download and extract Depot Downloader.

--- a/src/error.html
+++ b/src/error.html
@@ -17,7 +17,7 @@
 <body>
 	<div class="container center">
 		<header>
-			<p class="display-1 reveal-text">ERROR</p>
+			<p class="display-1">ERROR</p>
 		</header>
 	</div>
 	<script>
