--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,20 @@
 	<link rel="stylesheet" href="css/lib/bootstrap/bootstrap.min.css" />
 	<!-- Bootstrap Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script>const $ = require('jquery');</script>
-	<script>require('popper.js');</script>
-	<script>require('bootstrap');</script>
+	<script>
+		const $ = require('jquery');
+
+	</script>
+	<script>
+		require('popper.js');
+
+	</script>
+	<script>
+		require('bootstrap');
+
+	</script>
+	<link rel="stylesheet" href="../node_modules/xterm/css/xterm.css" />
+	<script src="../node_modules/xterm/lib/xterm.js"></script>
 
 </head>
 
@@ -20,27 +31,39 @@
 			<p class="display-1 reveal-text">SDV Downgrader</p>
 		</header>
 		<hr class="separator separator--line">
-		<div id="version" name="version" class="btn-group" role="group" aria-label="Select Version Box">
-			<select class="form-select" title="Select Version" name="versionNum" aria-label="Select Version Box">
-				<!-- <option selected value="0">Select Version</option> -->
-				<option value="1.5">v1.5</option>
-				<option value="1.4">v1.4</option>
-				<option value="1.3">v1.3</option>
-				<option value="1.2">v1.2</option>
-				<option value="1.1">v1.1</option>
-				<option value="1.0">v1.0</option>
-			</select>
+		<h5 id="Etext" class="emailText">Username</h5>
+		<div id="Einptwrap" class="emailInputWrapper">
+			<input id="Einput" class="emailInput" type="email" aria-label="Email" autocomplete="off" spellcheck="false"
+				maxlength="999">
 		</div>
-		<div class="btn-group download-button" role="group" aria-label="Button group example">
-			<button type="button" id="submit" class="btn btn btn-outline-primary">Download</button>
+		<h5 id="Ptext" class="passwordText">Password</h5>
+		<div id="Pinptwrap" class="passwordInputWrapper">
+			<input id="Pinput" class="passwordInput" type="password" aria-label="Password" autocomplete="off"
+				spellcheck="false" maxlength="999">
 		</div>
-		
+		<br>
+		<!-- <button id="Lbutton" type="submit" class="loginButton btn btn btn-outline-primary" onclick="verify()">Login</button> -->
+		<hr class="separator separator--line">
 		<footer>
-
+			<div id="version" name="version" class="btn-group" role="group" aria-label="Select Version Box">
+				<select class="form-select" title="Select Version" name="versionNum" aria-label="Select Version Box">
+					<!-- <option selected value="0">Select Version</option> -->
+					<option value="1.5">v1.5</option>
+					<option value="1.4">v1.4</option>
+					<option value="1.3">v1.3</option>
+					<option value="1.2">v1.2</option>
+					<option value="1.1">v1.1</option>
+					<option value="1.0">v1.0</option>
+				</select>
+			</div>
+			<div class="btn-group download-button" role="group" aria-label="Button group example">
+				<button type="button" id="submit" class="btn btn btn-outline-primary">Download</button>
+			</div>
 		</footer>
 	</div>
 	<script>
 		require('./js/renderer.js');
+
 	</script>
 </body>
 
