learned how to use switch statements

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 <body>
 	<div class="container center">
 		<header>
-			<p class="display-1 reveal-text">SDV Downgrader</p>
+			<p id="header-text" class="display-1 reveal-text">SDV Downgrader</p>
 		</header>
 		<hr class="separator separator--line">
 		<h5 id="Etext" class="emailText">Username</h5>
@@ -48,12 +48,12 @@
 			<div id="version" name="version" class="btn-group" role="group" aria-label="Select Version Box">
 				<select class="form-select" title="Select Version" name="versionNum" aria-label="Select Version Box">
 					<!-- <option selected value="0">Select Version</option> -->
-					<option value="1.5">v1.5</option>
-					<option value="1.4">v1.4</option>
-					<option value="1.3">v1.3</option>
-					<option value="1.2">v1.2</option>
-					<option value="1.1">v1.1</option>
 					<option value="1.0">v1.0</option>
+					<option value="1.1">v1.1</option>
+					<option value="1.2">v1.2</option>
+					<option value="1.3">v1.3</option>
+					<option value="1.4">v1.4</option>
+					<option value="1.5">v1.5</option>
 				</select>
 			</div>
 			<div class="btn-group download-button" role="group" aria-label="Button group example">
